--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </form>
   </div>
   <script>
-    var socket = io('localhost')
+    var socket = io('/')
     new Vue({
       el:'#root',
       data:{
