fix link socket

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p class="count">User(s) online : {{online}}</p>
   </div>
   <script>
-    var socket = io('localhost:5000')
+    var socket = io('/')
     new Vue({
       el: '#root',
       data: {
