--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.socket.io/socket.io-1.4.4.js"></script>
-  <script src="vue.js"></script>
+  <script src="vue.min.js"></script>
   <!-- <script src="assets/vue.js"></script> -->
 </head>
 
